--- a/scss/style.scss
+++ b/scss/style.scss
@@ -48,3 +48,6 @@ div {
 @import './user/components/background';
 @import './user/components/label-2';
 @import './user/components/blog';
+@import './user/components/no-result';
+@import './user/components/socialwrap';
+@import './user/components/enquiry';
