--- a/scss/user/components/_kv.scss
+++ b/scss/user/components/_kv.scss
@@ -66,7 +66,7 @@
 	};
 	@include sp {
     	height: 260px;
-    	width: 480px;
+    	width: 100%;
 		background-image: url('/static/images/top-sp.jpeg');
 	    background-size: cover;
 	    background-position: center center;
