--- a/scss/user/components/_label.scss
+++ b/scss/user/components/_label.scss
@@ -28,7 +28,7 @@
 		font-weight: bolder;
 	};
 	@include sp {
-		width: 480px;
+		width: 100%;
 		height: 50px;
 		background-color: #EAEAEA;
 		color: #464646;
