--- a/scss/user/components/_maintitle.scss
+++ b/scss/user/components/_maintitle.scss
@@ -2,11 +2,11 @@
 	color: #646464;
 	text-align: center;
 	padding: 10px;
-	margin-top: 20px;
-
+	margin-top: 30px;
+    margin-bottom: 30px;
 }
 
 .main-title h2 {
-	font-size: 24px;
+	font-size: 28px;
 	font-weight: bolder;
 }
