sns links adjust

--- a/scss/user/components/_socialwrap.scss
+++ b/scss/user/components/_socialwrap.scss
@@ -1,12 +1,4 @@
-.social-wrap {
-	padding: 20px 0;
-	text-align: center;
-}
- 
-.social-wrap div {
-	display: inline-block;
-}
- 
-.fb_iframe_widget > span {
-	vertical-align: baseline !important;
+.social-wrap span {
+	padding: 3px;
+	color: #7FC4FD;
 }
