--- a/scss/style.scss
+++ b/scss/style.scss
@@ -51,3 +51,4 @@ div {
 @import './user/components/no-result';
 @import './user/components/socialwrap';
 @import './user/components/enquiry';
+@import './user/components/news';
