--- a/scss/user/pages/_top.scss
+++ b/scss/user/pages/_top.scss
@@ -13,4 +13,12 @@
 	&__btn {
 		text-align: center;
 	}
+
+	&__news {
+		margin: 0 auto;
+		margin-top: 50px;
+		margin-bottom: 50px;
+		width: 95%;
+	}
+
 }
