--- a/scss/user/components/_blog.scss
+++ b/scss/user/components/_blog.scss
@@ -8,6 +8,7 @@
 		font-size: 20px;
 		color: #576574;
 		font-weight: bolder;
+		margin-bottom: 0px;
 	};
 	@include tab {
 		border-bottom: 1px solid #7FC4FD;
@@ -18,6 +19,7 @@
 		font-size: 20px;
 		color: #576574;
 		font-weight: bolder;
+		margin-bottom: 0px;
 	};
 	@include sp {
 		border-bottom: 1px solid #7FC4FD;
@@ -28,25 +30,32 @@
 		font-size: 18px;
 		color: #576574;
 		font-weight: bolder;
+		margin-bottom: 0px;
 	};	
 
 }
 
 .blog a{
 	@include pc {	
-		display: block;
-		padding-bottom: 5px;
-		font-size: 16px;
+	    display: block;
+	    padding-bottom: 10px;
+	    padding-top: 10px;
+	    font-size: 16px;
+	    border-bottom: #EAEAEA 1px solid;
 	};
 	@include tab {
-		display: block;
-		padding-bottom: 5px;
-		font-size: 16px;
+	    display: block;
+	    padding-bottom: 10px;
+	    padding-top: 10px;
+	    font-size: 16px;
+	    border-bottom: #EAEAEA 1px solid;
 	};
 	@include sp {
-		display: block;
-		padding-bottom: 5px;
-		font-size: 16px;
+	    display: block;
+	    padding-bottom: 10px;
+	    padding-top: 10px;
+	    font-size: 16px;
+	    border-bottom: #EAEAEA 1px solid;
 	};	
 
 }
