--- a/scss/user/components/_news.scss
+++ b/scss/user/components/_news.scss
@@ -4,13 +4,15 @@
 	color: #464646;
 
 	&__table th{
-		font-size: 14px;
-		padding: 5px;
+    font-size: 14px;
+    padding: 10px;
+    width: 18%;
+    vertical-align: top;
 	}
 
 	&__table td{
 		font-size: 16px;
-		padding: 5px;
+		padding: 10px;
 	}
 
 }
